<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.project3_wiltontuji.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            style="@style/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/titulo" />

        <TextView
            style="@style/questao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descricao" />

        <TextView
            style="@style/intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/int1" />

        <TextView
            style="@style/questao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questao1" />

        <RadioGroup
            android:id="@+id/radio_group_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_do"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableBottom="@drawable/clave_do" />

            <RadioButton
                android:id="@+id/radio_fa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableBottom="@drawable/clave_fa" />

            <RadioButton
                android:id="@+id/radio_sol"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableBottom="@drawable/clave_sol" />

        </RadioGroup>


        <TextView
            android:id="@+id/gabarito_1"
            style="@style/resposta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/int2" />

        <TextView
            style="@style/questao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questao2" />

        <EditText
            android:id="@+id/resposta_usuario_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:hint="@string/escrever"
            android:inputType="text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/gabarito_2"
            style="@style/resposta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/int3" />

        <TextView
            style="@style/questao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questao3" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkbox_lento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="Lento" />

            <CheckBox
                android:id="@+id/checkbox_saudosista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Saudosista" />

            <CheckBox
                android:id="@+id/checkbox_marcia_moderato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Marcia Moderato" />

            <CheckBox
                android:id="@+id/checkbox_allegretto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Allegretto" />

            <CheckBox
                android:id="@+id/checkbox_vibrant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vibrant" />

        </LinearLayout>

        <TextView
            android:id="@+id/gabarito_3"
            style="@style/resposta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/int4" />

        <TextView
            style="@style/questao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questao4" />

        <RadioGroup
            android:id="@+id/radio_group_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="28dp">

            <RadioButton
                android:id="@+id/ABCDEFG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A B C D E F G" />

            <RadioButton
                android:id="@+id/BCDEFGA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="B C D E F G A" />

            <RadioButton
                android:id="@+id/CDEFGAB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="C D E F G A B" />

        </RadioGroup>

        <TextView
            android:id="@+id/gabarito_4"
            style="@style/resposta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="14dp"
            android:onClick="verificar"
            android:text="@string/verificar" />

    </LinearLayout>

</ScrollView>